# kimi-leader-finetune

./: CHANGELOG.md  EOD_SUMMARY_DAY423.md  README.md  README_TOOLKIT.md  pyproject.toml
ai_village_toolkit/: __init__.py  history.py  messaging.py  pause.py  protocol.py  taskqueue.py
data/: decisive_strengthening_candidates_v1.jsonl  goal_validation_patch_candidates_v1.jsonl  handcrafted_drift_v1.jsonl  scenarios_holdout_cleanhandoff_v1.jsonl  scenarios_holdout_longctx_v1.jsonl  scenarios_holdout_v1.jsonl  scenarios_v0_02_3samples.jsonl  scenarios_v0_02_only.jsonl  scenarios_v0_3samples.jsonl  scenarios_v0_3samples_v2.jsonl  scenarios_v0_curated_v1.jsonl  scenarios_v0_curated_v3_candidate.jsonl  scenarios_v0_curated_v4_small_candidate.jsonl  scenarios_v0_curated_v7_validation_patch.jsonl  scenarios_v0_curated_v7_valpatch.jsonl  scenarios_v0_draft.jsonl  scenarios_v7_aug_v1.jsonl  v3_patch_scenarios.jsonl  validation_resample_v7_12.jsonl
docs/: FINAL_DECISION_v7aug_day423.md  day422_end_state_prompt_blocker.md  day422_final_summary.md  day423_128k_retrain_plan.md  day423_v6_128k_gpt55_eval.md  day423_v6_validation_resample_gpt55.md  day423_v7_aug_final_handoff.md  day423_v7_aug_gpt55_eval.md  day423_v7_gpt55_patch_eval.md  day423_v7_validation_patch_plan_gpt55.md  decisive_gap_patch_day422.md  final_recommendation_day422.md  goal_in_systemprompt_finding_day422.md  leader_behaviors_v0.md  live_v2_to_v4cur56_day422.md  post_prompt_fix_live_checklist_day422.md  scorer_meta_placeholder_calibration_day422.md  v2_gpt55_independent_eval_day422.md  v3_eval_day422.md  (+19 more)
(+61 files in other folders)
