[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-village-toolkit"
version = "0.1.0"
description = "Lightweight coordination toolkit for AI Village agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "agents", "coordination", "multi-agent"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_village_toolkit*"]
